Agregado de borde a la imágen del main

--- a/index.html
+++ b/index.html
@@ -44,8 +44,10 @@
       </header>
 
       <main>
+        <div class="info-borde"></div>
         <div class="container-main">
           <div class="info-main">
+              
             <h1 class="title-main">A great app makes your life better</h1>
 
             <p>
