Agregado de nueva sección

--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
   <body>
     <div class="section-main">
       <header>
+
+        <!-- Primer header con info mail y redes-->
         <div class="header-contacto">
           <div class="header-info">
             <img src="img/mail.png" alt="" />
@@ -22,7 +24,8 @@
           </div>
         </div>
 
-        <div class="menu-header">
+        <!-- Segundo header con el navbar-->
+        <nav class="menu-header">
           <div>
             <ul>
               <li><a href="#">HOME</a></li>
@@ -40,9 +43,11 @@
               <li><a href="#" class="btn-download">DOWNLOAD</a></li>
             </ul>
           </div>
-        </div>
+        </nav>
       </header>
 
+
+      <!--Seccion principal con imagenes y texto -->
       <main>
         <div class="info-borde"></div>
         <div class="container-main">
@@ -67,11 +72,13 @@
       </main>
     </div>
 
+
+    <!-- Seccion about -->
     <div class="about-section">
       <div class="container-about">
-        <h2 class="title-about">ABOUT OUR APP</h2>
+        <h2 class="title-black">ABOUT OUR APP</h2>
 
-        <h4>
+        <h4 class="subtitle-black">
           Lorem ipsum dolor sit amet, consectetur adipiscing elit. Viverra nunc
           ante velit vitae. Est tellus vitae, nullam lobortis enim. Faucibus
           amet etiam tincidunt rhoncus, ullamcorper velit. Ullamcorper risus
@@ -116,11 +123,64 @@
       </div>
     </div>
 
+
+    <!-- Sección de features -->
     <div class="features-section">
         <div class="container-features">
             <h2 class="title-features">APP FEATURES</h2>
 
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Viverra nunc ante velit vitae. Est tellus vitae, nullam lobortis enim. Faucibus amet etiam tincidunt rhoncus, ullamcorper velit. Ullamcorper risus tempor, ac nunc libero urna, feugiat.</p>
+
+            <div class="free-chat">
+                <img src="./img/chat.svg" alt="">
+                <h3>full free chat</h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+            </div>
+
+            <div class="featuring-central">
+                <article class="primer">
+                    <div class="freaturing-cards">
+                        <img class="img-feature" src="./img/featuring-1.svg" alt="">
+                        <h4>UNLIMITER FEATURES</h4>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                    </div>
+                    <div class="freaturing-cards">
+                        <img class="img-feature" src="./img/featuring-2.svg" alt="">
+                        <h4>UNLIMITER FEATURES</h4>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                    </div>
+                </article>
+                <article class="segundo">
+                    <img  src="./img/featuring-central.svg" alt="">
+                </article>
+                <article class="primer">
+                    <div class="freaturing-cards">
+                        <img class="img-feature" src="./img/featuring-3.svg" alt="">
+                        <h4>UNLIMITER FEATURES</h4>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                    </div>
+                    <div class="freaturing-cards">
+                        <img class="img-feature" src="./img/featuring-4.svg" alt="">
+                        <h4>UNLIMITER FEATURES</h4>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                    </div>
+                </article>
+            </div>
+
+            <div class="free-chat">
+                <img class="img-feature" src="./img/Icons/male-telemarketer.svg" alt="">
+                <h3>24/7 SUPPORT BY REAL PEOPLE</h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+            </div>
+        </div>
+
+
+    </div>
+
+    <div class="our-team-section">
+        <div class="container-section">
+            <h2 class="title-black">OUR REATIVE TEAM</h2>
+            <h4 class="subtitle-black">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Viverra nunc ante velit vitae. Est tellus vitae, nullam lobortis enim. Faucibus amet etiam tincidunt rhoncus, ullamcorper velit. Ullamcorper risus tempor, ac nunc libero urna, feugiat.</h4>
         </div>
     </div>
   </body>
