Agregada la sección de our reative team

--- a/index.html
+++ b/index.html
@@ -181,6 +181,46 @@
         <div class="container-section">
             <h2 class="title-black">OUR REATIVE TEAM</h2>
             <h4 class="subtitle-black">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Viverra nunc ante velit vitae. Est tellus vitae, nullam lobortis enim. Faucibus amet etiam tincidunt rhoncus, ullamcorper velit. Ullamcorper risus tempor, ac nunc libero urna, feugiat.</h4>
+
+
+            <div class="container-cards-team">
+                <article class="card-team">
+                    <img class="img-card" src="./img/carla.svg" alt="">
+                    <h3>CARLA PRESS</h3>
+                    <h4>APP DEVELOPER</h4>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Viverra nunc ante velit vitae. Est tellus vitae.</p>
+                    <div class="card-redes-sociales">
+                        <img class="icon-red-social" src="./img/card-fb.svg" alt="">
+                        <img class="icon-red-social" src="./img/card-ig.svg" alt="">
+                        <img class="icon-red-social" src="./img/card-tw.svg" alt="">
+                        <img class="icon-red-social" src="./img/card-yt.svg" alt="">
+                    </div>
+                </article>
+                <article class="card-team">
+                    <img class="img-card" src="./img/craig.svg" alt="">
+                    <h3>CRAIG GOUSE</h3>
+                    <h4>UI/UX DESIGNER</h4>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Viverra nunc ante velit vitae. Est tellus vitae.</p>
+                    <div class="card-redes-sociales">
+                        <img class="icon-red-social" src="./img/card-fb.svg" alt="">
+                        <img class="icon-red-social" src="./img/card-ig.svg" alt="">
+                        <img class="icon-red-social" src="./img/card-tw.svg" alt="">
+                        <img class="icon-red-social" src="./img/card-yt.svg" alt="">
+                    </div>
+                </article>
+                <article class="card-team">
+                    <img class="img-card" src="./img/joselyn.svg" alt="">
+                    <h3>JOSELYN SEPTIMUS</h3>
+                    <h4>WEBSITE DEVELOPER</h4>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Viverra nunc ante velit vitae. Est tellus vitae.</p>
+                    <div class="card-redes-sociales">
+                        <img class="icon-red-social" src="./img/card-fb.svg" alt="">
+                        <img class="icon-red-social" src="./img/card-ig.svg" alt="">
+                        <img class="icon-red-social" src="./img/card-tw.svg" alt="">
+                        <img class="icon-red-social" src="./img/card-yt.svg" alt="">
+                    </div>
+                </article>
+            </div>
         </div>
     </div>
   </body>
