Agregado de hover y links

--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
         <nav class="header__menu">
           <div>
             <ul>
-              <li><a class="header__link" href="#">HOME</a></li>
-              <li><a class="header__link" href="#">ABOUT</a></li>
-              <li><a class="header__link" href="#">FEATURES</a></li>
+              <li><a class="header__link" href="#hero">HOME</a></li>
+              <li><a class="header__link" href="#about">ABOUT</a></li>
+              <li><a class="header__link" href="#features">FEATURES</a></li>
             </ul>
           </div>
           <div class="header__centerlogo">
@@ -38,8 +38,8 @@
           </div>
           <div>
             <ul>
-              <li><a class="header__link" href="#">TEAM</a></li>
-              <li><a  class="header__link"href="#">CONTACTO</a></li>
+              <li><a class="header__link" href="#team">TEAM</a></li>
+              <li><a  class="header__link"href="#contact">CONTACTO</a></li>
               <li><a class="header__link header__button" href="#" >DOWNLOAD</a></li>
             </ul>
           </div>
@@ -49,7 +49,7 @@
 
       <!--Seccion principal con imagenes y texto -->
       
-      <section>
+      <section id="hero">
         <div class="border__hero"></div>
         <div class="container__hero">
           <div class="hero">
@@ -74,7 +74,7 @@
 
 
     <!-- Seccion about -->
-    <section class="section-white">
+    <section id="about" class="section-white">
       <div class="container-all">
         <h2 class="title_black">ABOUT OUR APP</h2>
 
@@ -125,7 +125,7 @@
 
 
     <!-- Sección de features -->
-    <section class="section-royalblue">
+    <section id="features" class="section-royalblue">
         <div class="container-all">
             <h2 class="features__title">APP FEATURES</h2>
 
@@ -178,7 +178,7 @@
     </section>
 
     <!--Seccion de our team-->
-    <section class="section-white">
+    <section id="team" class="section-white">
         <div class="container-all">
             <h2 class="title_black">OUR REATIVE TEAM</h2>
             <p class="subtitle_black">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Viverra nunc ante velit vitae. Est tellus vitae, nullam lobortis enim. Faucibus amet etiam tincidunt rhoncus, ullamcorper velit. Ullamcorper risus tempor, ac nunc libero urna, feugiat.</p>
@@ -246,7 +246,7 @@
         </div>
     </section>
 </main>
-    <footer>
+    <footer id="contact">
         <div class="footer-container">
            <div class="footer__contenedor">
             <div class="footer__container--card">
@@ -268,8 +268,8 @@
                 <h2 class="footer__h2">
                     QUICK LINK
                 </h2>
-                <p class="footer__p">About</p>
-                <p class="footer__p">Features</p>
+                <p class="footer__p"><a href="#about" class="footer__a">About</a></p>
+                <p class="footer__p"><a href="#about" class="footer__a">Features</a></p>
                 <p class="footer__p">Screenshot</p>
                 <p class="footer__p">Blog</p>
             </div>
