--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
       </header>
          </section>
 
-      <!--Seccion principal con imagenes y texto -->
+      <!--Seccion HERO con imagenes y texto -->
       
       <section id="hero">
         <div class="border__hero"></div>
@@ -190,13 +190,13 @@
                     <h4>APP DEVELOPER</h4>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Viverra nunc ante velit vitae. Est tellus vitae.</p>
                     <div class="card-socialmedia">
-                        <img class="card-socialmedia__img" src="./assets/img/card-ig.svg" alt="">
+                        <a href="http://facebook.com"><img class="card-socialmedia__img" src="./assets/img/card-fb.svg" alt=""></a>
                         <span class="card__separator">|</span>
-                        <img class="card-socialmedia__img" src="./assets/img/card-tw.svg" alt="">
+                        <a href="http://instagram.com"><img class="card-socialmedia__img" src="./assets/img/card-ig.svg" alt=""></a>
                         <span class="card__separator">|</span>
-                        <img class="card-socialmedia__img" src="./assets/img/card-yt.svg" alt="">
+                        <a href="http://twitter.com"> <img class="card-socialmedia__img" src="./assets/img/card-tw.svg" alt=""></a>
                         <span class="card__separator">|</span>
-                        <img class="card-socialmedia__img" src="./assets/img/card-fb.svg" alt="">
+                        <a href="http://youtube.com"></a><img class="card-socialmedia__img" src="./assets/img/card-yt.svg" alt=""></a>
                     </div>
                 </article>
                 <article class="card-people">
@@ -205,13 +205,13 @@
                     <h4>UI/UX DESIGNER</h4>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Viverra nunc ante velit vitae. Est tellus vitae.</p>
                     <div class="card-socialmedia">
-                        <img class="card-socialmedia__img" src="./assets/img/card-fb.svg" alt="">
+                        <a href="http://facebook.com"><img class="card-socialmedia__img" src="./assets/img/card-fb.svg" alt=""></a>
                         <span class="card__separator">|</span>
-                        <img class="card-socialmedia__img" src="./assets/img/card-ig.svg" alt="">
+                        <a href="http://instagram.com"><img class="card-socialmedia__img" src="./assets/img/card-ig.svg" alt=""></a>
                         <span class="card__separator">|</span>
-                        <img class="card-socialmedia__img" src="./assets/img/card-tw.svg" alt="">
+                        <a href="http://twitter.com"> <img class="card-socialmedia__img" src="./assets/img/card-tw.svg" alt=""></a>
                         <span class="card__separator">|</span>
-                        <img class="card-socialmedia__img" src="./assets/img/card-yt.svg" alt="">
+                        <a href="http://youtube.com"></a><img class="card-socialmedia__img" src="./assets/img/card-yt.svg" alt=""></a>
                     </div>
                 </article>
                 <article class="card-people">
@@ -220,13 +220,13 @@
                     <h4>WEBSITE DEVELOPER</h4>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Viverra nunc ante velit vitae. Est tellus vitae.</p>
                     <div class="card-socialmedia">
-                        <img class="card-socialmedia__img" src="./assets/img/card-fb.svg" alt="">
+                        <a href="http://facebook.com"><img class="card-socialmedia__img" src="./assets/img/card-fb.svg" alt=""></a>
                         <span class="card__separator">|</span>
-                        <img class="card-socialmedia__img" src="./assets/img/card-ig.svg" alt="">
+                        <a href="http://instagram.com"><img class="card-socialmedia__img" src="./assets/img/card-ig.svg" alt=""></a>
                         <span class="card__separator">|</span>
-                        <img class="card-socialmedia__img" src="./assets/img/card-tw.svg" alt="">
+                        <a href="http://twitter.com"> <img class="card-socialmedia__img" src="./assets/img/card-tw.svg" alt=""></a>
                         <span class="card__separator">|</span>
-                        <img class="card-socialmedia__img" src="./assets/img/card-yt.svg" alt="">
+                        <a href="http://youtube.com"></a><img class="card-socialmedia__img" src="./assets/img/card-yt.svg" alt=""></a>
                     </div>
                 </article>
             </div>
@@ -246,6 +246,8 @@
         </div>
     </section>
 </main>
+
+    <!-- FOOTER SECTION-->
     <footer id="contact">
         <div class="footer-container">
            <div class="footer__contenedor">
@@ -257,10 +259,10 @@
                     Lorem ipsum dolor sit amet, consectetur adipiscing elit. Viverra nunc ante velit vitae. Est tellus vitae, nullam lobortis enim.
                 </p>
                 <div class="footer__icons">
-                    <img src="./assets/img/card-fb.svg" alt="">
-                    <img src="./assets/img/card-ig.svg" alt="">
-                    <img src="./assets/img/card-tw.svg" alt="">
-                    <img src="./assets/img/card-yt.svg" alt="">
+                    <a href="http://facebook.com"> <img src="./assets/img/card-fb.svg" alt=""></a>
+                    <a href="http://instagram.com">  <img src="./assets/img/card-ig.svg" alt=""></a>
+                    <a href="http://twitter.com"><img src="./assets/img/card-tw.svg" alt=""></a>
+                    <a href="http://youtube.com"><img src="./assets/img/card-yt.svg" alt=""></a>
                 </div>
             </div>
 
