new colors and links

--- a/index.html
+++ b/index.html
@@ -206,16 +206,13 @@
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Viverra nunc ante velit vitae. Est tellus vitae.
             </p>
             <div class="card-socialmedia">
-              <a href="http://facebook.com" class="card-socialmedia__a"><img class="card-socialmedia__img"
-                  src="./assets/img/card-fb.svg" alt=""></a>
-              <span class="card__separator">|</span>
-              <a href="http://instagram.com" class="card-socialmedia__a"><img class="card-socialmedia__img"
-                  src="./assets/img/card-ig.svg" alt=""></a>
-              <span class="card__separator">|</span>
-              <a href="http://twitter.com"> <img class="card-socialmedia__img" src="./assets/img/card-tw.svg"
-                  alt=""></a>
-              <span class="card__separator">|</span>
-              <a href="http://youtube.com"><img class="card-socialmedia__img" src="./assets/img/card-yt.svg" alt=""></a>
+            <a href="http://facebook.com" class="icons__fb"> <i class="fa-brands fa-facebook-f"></i></a>
+            <i class="fa-solid fa-minus fa-rotate-90 fa-1x"></i>
+            <a href="http://instagram.com" class="icons__ig"> <i class="fa-brands fa-instagram"></i></a>
+            <i class="fa-solid fa-minus fa-rotate-90 fa-1x"></i>
+            <a href="http://twitter.com" class="icons__tw"><i class="fa-brands fa-twitter"></i></a>
+            <i class="fa-solid fa-minus fa-rotate-90 fa-1x"></i>
+            <a href="http://youtube.com" class="icons__yt"><i class="fa-brands fa-youtube"></i></a>
             </div>
           </article>
           <article class="ourteam__card">
@@ -225,16 +222,13 @@
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Viverra nunc ante velit vitae. Est tellus vitae.
             </p>
             <div class="card-socialmedia">
-              <a href="http://facebook.com"><img class="card-socialmedia__img" src="./assets/img/card-fb.svg"
-                  alt=""></a>
-              <span class="card__separator">|</span>
-              <a href="http://instagram.com"><img class="card-socialmedia__img" src="./assets/img/card-ig.svg"
-                  alt=""></a>
-              <span class="card__separator">|</span>
-              <a href="http://twitter.com"> <img class="card-socialmedia__img" src="./assets/img/card-tw.svg"
-                  alt=""></a>
-              <span class="card__separator">|</span>
-              <a href="http://youtube.com"><img class="card-socialmedia__img" src="./assets/img/card-yt.svg" alt=""></a>
+              <a href="http://facebook.com" class="icons__fb"> <i class="fa-brands fa-facebook-f"></i></a>
+              <i class="fa-solid fa-minus fa-rotate-90 fa-1x"></i>
+              <a href="http://instagram.com" class="icons__ig"> <i class="fa-brands fa-instagram"></i></a>
+              <i class="fa-solid fa-minus fa-rotate-90 fa-1x"></i>
+              <a href="http://twitter.com" class="icons__tw"><i class="fa-brands fa-twitter"></i></a>
+              <i class="fa-solid fa-minus fa-rotate-90 fa-1x"></i>
+              <a href="http://youtube.com" class="icons__yt"><i class="fa-brands fa-youtube"></i></a>
             </div>
           </article>
           <article class="ourteam__card">
@@ -244,16 +238,13 @@
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Viverra nunc ante velit vitae. Est tellus vitae.
             </p>
             <div class="card-socialmedia">
-              <a href="http://facebook.com"><img class="card-socialmedia__img" src="./assets/img/card-fb.svg"
-                  alt=""></a>
-              <span class="card__separator">|</span>
-              <a href="http://instagram.com"><img class="card-socialmedia__img" src="./assets/img/card-ig.svg"
-                  alt=""></a>
-              <span class="card__separator">|</span>
-              <a href="http://twitter.com"> <img class="card-socialmedia__img" src="./assets/img/card-tw.svg"
-                  alt=""></a>
-              <span class="card__separator">|</span>
-              <a href="http://youtube.com"><img class="card-socialmedia__img" src="./assets/img/card-yt.svg" alt=""></a>
+              <a href="http://facebook.com" class="icons__fb"> <i class="fa-brands fa-facebook-f "></i></a>
+              <i class="fa-solid fa-minus fa-rotate-90 "></i>
+              <a href="http://instagram.com" class="icons__ig"> <i class="fa-brands fa-instagram "></i></a>
+              <i class="fa-solid fa-minus fa-rotate-90 "></i>
+              <a href="http://twitter.com" class="icons__tw"><i class="fa-brands fa-twitter "></i></a>
+              <i class="fa-solid fa-minus fa-rotate-90 "></i>
+              <a href="http://youtube.com" class="icons__yt"><i class="fa-brands fa-youtube"></i></a>
             </div>
           </article>
         </div>
@@ -290,13 +281,13 @@
             nullam lobortis enim.
           </p>
           <div class="footer__icons">
-            <a href="http://facebook.com"> <img src="./assets/img/card-fb.svg" alt=""></a>
+            <a href="http://facebook.com" class="icons__fb"> <i class="fa-brands fa-facebook-f"></i></a>
             <i class="fa-solid fa-minus fa-rotate-90 fa-1x"></i>
-            <a href="http://instagram.com"> <img src="./assets/img/card-ig.svg" alt=""></a>
+            <a href="http://instagram.com" class="icons__ig"> <i class="fa-brands fa-instagram"></i></a>
             <i class="fa-solid fa-minus fa-rotate-90 fa-1x"></i>
-            <a href="http://twitter.com"><img src="./assets/img/card-tw.svg" alt=""></a>
+            <a href="http://twitter.com" class="icons__tw"><i class="fa-brands fa-twitter"></i></a>
             <i class="fa-solid fa-minus fa-rotate-90 fa-1x"></i>
-            <a href="http://youtube.com"><img src="./assets/img/card-yt.svg" alt=""></a>
+            <a href="http://youtube.com" class="icons__yt"><i class="fa-brands fa-youtube"></i></a>
           </div>
         </div>
 
