add header responsive

--- a/index.html
+++ b/index.html
@@ -11,53 +11,56 @@
 </head>
 
 <body>
-  <main>
-    <section class="container-all">
-      <header>
-        <!-- Primer header con info mail y redes-->
-        <div class="header__container-contact">
-          <div class="header__info">
-            <img src="./assets/img/mail.png" alt="" />
-            <p>info@youremail.com</p>
-            <img src="./assets/img/telefono.png" alt="" />
-            <p>(480)555-0103</p>
-          </div>
-          <div class="header__redes">
-            <a href="http://facebook.com"><img src="./assets/img/Icons/facebook-header.svg" alt=""></a>
-            <a href="http://instagram.com"><img src="./assets/img/Icons/instagram-header.svg" alt=""></a>
-            <a href="http://twitter.com"><img src="./assets/img/Icons/twitter-header.svg" alt=""></a>
-            <a href="http://youtube.com"><img src="./assets/img/Icons/youtube-header.svg" alt=""></a>
-          </div>
-        </div>
 
-        <!-- Segundo header con el navbar-->
-        <nav class="header__menu">
-          <div class="header__firstnav">
-            <ul class="header__first-ul">
-              <li><a class="header__link" href="#hero">HOME</a></li>
-              <li><a class="header__link" href="#about">ABOUT</a></li>
-              <li><a class="header__link" href="#features">FEATURES</a></li>
-            </ul>
-            <div class="header__iconhamburger">
-              <i class="fa-solid fa-bars fa-2x"></i>
+
+  <header>
+    <div class="container__header">
+          <!-- Primer header con info mail y redes-->
+          <div class="header__container-contact">
+            <div class="header__info">
+              <img src="./assets/img/mail.png" alt="" />
+              <p>info@youremail.com</p>
+              <img src="./assets/img/telefono.png" alt="" />
+              <p>(480)555-0103</p>
+            </div>
+            <div class="header__redes">
+              <a href="http://facebook.com"><img src="./assets/img/Icons/facebook-header.svg" alt=""></a>
+              <a href="http://instagram.com"><img src="./assets/img/Icons/instagram-header.svg" alt=""></a>
+              <a href="http://twitter.com"><img src="./assets/img/Icons/twitter-header.svg" alt=""></a>
+              <a href="http://youtube.com"><img src="./assets/img/Icons/youtube-header.svg" alt=""></a>
             </div>
           </div>
-          <div class="header__centerlogo">
-            <img class="header__logo-img " src="./assets/img/logo-apolly.png" alt="" />
-          </div>
-          <div>
-            <ul class="header__second-ul">
-              <li><a class="header__link" href="#team">TEAM</a></li>
-              <li><a class="header__link" href="#contact">CONTACTO</a></li>
-              <li><a class="header__link header__button" href="#">DOWNLOAD</a></li>
-            </ul>
-            <div class="header__btndownload">
-                <li><a href="#" class="header__button">DOWNLOAD</a></li>
+  
+          <!-- Segundo header con el navbar-->
+          <nav class="header__menu">
+            <div class="header__firstnav">
+              <ul class="header__first-ul">
+                <li><a class="header__link" href="#hero">HOME</a></li>
+                <li><a class="header__link" href="#about">ABOUT</a></li>
+                <li><a class="header__link" href="#features">FEATURES</a></li>
+              </ul>
+              <div class="header__iconhamburger">
+                <i class="fa-solid fa-bars "></i>
+              </div>
             </div>
-          </div>
-        </nav>
-      </header>
-    </section>
+            <div class="header__centerlogo">
+              <img class="header__logo-img " src="./assets/img/logo-apolly.png" alt="" />
+            </div>
+            <div>
+              <ul class="header__second-ul">
+                <li><a class="header__link" href="#team">TEAM</a></li>
+                <li><a class="header__link" href="#contact">CONTACTO</a></li>
+                <li><a class="header__link header__button" href="#">DOWNLOAD</a></li>
+              </ul>
+              <div class="header__btndownload">
+                  <li><a href="#" class="header__button">DOWNLOAD</a></li>
+              </div>
+            </div>
+          </nav>
+    </div>
+  </header>
+  
+  <main>
 
     <!--Seccion HERO con imagenes y texto -->
 
