--- a/index.html
+++ b/index.html
@@ -8,12 +8,28 @@
   <title>Home Page</title>
   <link rel="stylesheet" href="./assets/styles/styles.css" />
   <script src="https://kit.fontawesome.com/4835576d8b.js" crossorigin="anonymous"></script>
+ 
 </head>
 
 <body>
 
 
+  <!--Header section-->
   <header>
+
+    <div class="header__hamburger">
+      <ul class="header__hamburger-ul">
+        <div class="header__close">
+          <i id="button-close" class="fa-solid fa-circle-xmark fa-2x"></i>
+        </div>
+        
+        <li class="header__hamburger-li">Home</li>
+        <li class="header__hamburger-li">About</li>
+        <li class="header__hamburger-li">Features</li>
+        <li class="header__hamburger-li">Team</li>
+        <li class="header__hamburger-li">Contact</li>
+      </ul>
+    </div>
     <div class="container__header">
           <!-- Primer header con info mail y redes-->
           <div class="header__container-contact">
@@ -40,7 +56,7 @@
                 <li><a class="header__link" href="#features">FEATURES</a></li>
               </ul>
               <div class="header__iconhamburger">
-                <i class="fa-solid fa-bars "></i>
+                <i id="button-open"class="fa-solid fa-bars "></i>
               </div>
             </div>
             <div class="header__centerlogo">
@@ -60,6 +76,7 @@
     </div>
   </header>
   
+  <!-- Main Section-->
   <main>
 
     <!--Seccion HERO con imagenes y texto -->
@@ -67,7 +84,7 @@
     <section id="hero">
       <div class="border__hero"></div>
       <div class="container__hero">
-        <div class="hero">
+        <div class="hero__card">
           <h1 class="hero__title">A great app makes your life better</h1>
 
           <p class="hero__p">
@@ -77,13 +94,14 @@
           </p>
 
           <h3 class="hero__h3">Download App Now</h3>
-          <img src="./assets/img/downloadgoogle.png" alt="" />
-          <img src="./assets/img/downloadapp.png" alt="" />
+          <div class="hero__container-buttons">
+          <a href="http://google.com"><img src="./assets/img/downloadgoogle.png" alt="" /></a>
+          <a href="https://www.apple.com/"><img src="./assets/img/downloadapp.png" alt="" /></a>
+          </div>
         </div>
         <div class="hero__img">
           <img src="./assets/img/telefono-main.png" alt="" />
         </div>
-      </div>
       </div>
     </section>
 
@@ -100,7 +118,7 @@
           tempor, ac nunc libero urna, feugiat.
         </p>
 
-        <div class="hero__container">
+        <div class="about__container">
           <div class="container__imagenabout">
 
             <img src="./assets/img/android-about.svg" alt="" />
@@ -108,9 +126,12 @@
           </div>
 
 
-          <div class="hero__container-list">
-            <div class="hero__list-item">
+          <div class="about__container-list">
+            <div class="about__list-item">
+              <div class="about__list-item-img">
               <img src="./assets/img/about.svg" alt="" />
+              </div>
+              <div class="about__list-item-text">
               <h3>CREATIVE DESIGN</h3>
               <p>
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Viverra
@@ -118,8 +139,12 @@
                 Faucibus amet etiam tincidunt rhoncus, ullamcorper velit.
               </p>
             </div>
-            <div class="hero__list-item">
+            </div>
+            <div class="about__list-item">
+              <div class="about__list-item-img">
               <img src="./assets/img/about.svg" alt="" />
+              </div>
+              <div class="about__list-item-text">
               <h3>EASY TO USE</h3>
               <p>
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Viverra
@@ -127,14 +152,19 @@
                 Faucibus amet etiam tincidunt rhoncus, ullamcorper velit.
               </p>
             </div>
-            <div class="hero__list-item">
-              <img src="./assets/img/about.svg" alt="" />
+            </div>
+            <div class="about__list-item">
+              <div class="about__list-item-img">
+                <img src="./assets/img/about.svg" alt="" />
+              </div>
+              <div class="about__list-item-text">
               <h3>BEST USER EXPERIENCE</h3>
               <p>
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Viverra
                 nunc ante velit vitae. Est tellus vitae, nullam lobortis enim.
                 Faucibus amet etiam tincidunt rhoncus, ullamcorper velit.
               </p>
+            </div>
             </div>
           </div>
         </div>
@@ -334,6 +364,9 @@
       </p>
     </div>
   </footer>
+
+
+  <script src="./js/header.js"></script>
 </body>
 
 </html>
