--- a/index.html
+++ b/index.html
@@ -40,10 +40,10 @@
               <p>(480)555-0103</p>
             </div>
             <div class="header__redes">
-              <a href="http://facebook.com"><img src="./assets/img/Icons/facebook-header.svg" alt=""></a>
-              <a href="http://instagram.com"><img src="./assets/img/Icons/instagram-header.svg" alt=""></a>
-              <a href="http://twitter.com"><img src="./assets/img/Icons/twitter-header.svg" alt=""></a>
-              <a href="http://youtube.com"><img src="./assets/img/Icons/youtube-header.svg" alt=""></a>
+              <a href="http://facebook.com" class="header__redes-a"><img src="./assets/img/Icons/facebook-header.svg" alt=""></a>
+              <a href="http://instagram.com" class="header__redes-a"><img src="./assets/img/Icons/instagram-header.svg" alt=""></a>
+              <a href="http://twitter.com" class="header__redes-a"><img src="./assets/img/Icons/twitter-header.svg" alt=""></a>
+              <a href="http://youtube.com" class="header__redes-a"><img src="./assets/img/Icons/youtube-header.svg" alt=""></a>
             </div>
           </div>
   
