fix header hamburger

--- a/index.html
+++ b/index.html
@@ -23,11 +23,11 @@
           <i id="button-close" class="fa-solid fa-circle-xmark fa-2x"></i>
         </div>
         
-        <li class="header__hamburger-li">Home</li>
-        <li class="header__hamburger-li">About</li>
-        <li class="header__hamburger-li">Features</li>
-        <li class="header__hamburger-li">Team</li>
-        <li class="header__hamburger-li">Contact</li>
+        <li class="header__hamburger-li"><a class="header__hamburger-a" href="#hero">Home</a></li>
+        <li class="header__hamburger-li"><a class="header__hamburger-a" href="#about">About</a></li>
+        <li class="header__hamburger-li"><a class="header__hamburger-a" href="#features">Features</a></li>
+        <li class="header__hamburger-li"><a class="header__hamburger-a" href="#team">Team</a></li>
+        <li class="header__hamburger-li"><a class="header__hamburger-a" href="#contact">Contact</a></li>
       </ul>
     </div>
     <div class="container__header">
